Bug 1726595 - WebIDL code generation for Promise returning callbacks doesn't handle abrupt completions correctly. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D125531